--- a/src/AgileTimer.Client/MainWindow.xaml
+++ b/src/AgileTimer.Client/MainWindow.xaml
@@ -11,29 +11,26 @@
             <ColumnDefinition Width="Auto"/>
             <ColumnDefinition Width="9*"/>
         </Grid.ColumnDefinitions>
-        <!--<Label Content="Hello .NET Core!" HorizontalAlignment="Center" VerticalAlignment="Center"
-               FontSize="40"/>-->
-        <Grid>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="2*" />
-                <RowDefinition Height="8*" />
-            </Grid.RowDefinitions>
+        <StackPanel Name="MobberPanel">
             <Button Content="Add" FontSize="30" Width="100" Height="100" Click="OnAddMobberClicked"/>
-            <StackPanel Grid.Row="1" Name="MobberPanel"></StackPanel>
-        </Grid>
+        </StackPanel>
         <Grid Grid.Column="1">
             <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto"/>
-                <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="Auto"/>
             </Grid.ColumnDefinitions>
-            <Label Name="TimerLabel" Grid.ColumnSpan="3" Content="15:00"  HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="80"/>
-            <Button Name="ToggleTimerButton" Grid.Row="1" Grid.Column="0" Content="Start" FontSize="30" Width="100" Height="100"/>
-            <Button Grid.Row="1" Grid.Column="1" Content="Reset" FontSize="30" Width="100" Height="100"  Click="OnResetTimerClicked"/>
+            <Button Content="Settings" Grid.Row="0" Grid.Column="2" FontSize="30" Width="120" Height="50" Click="OnSettingsClicked"/>
+            <Label Name="TimerLabel" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="3" Content="15:00"  HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="80"/>
+            <StackPanel Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="3" Orientation="Horizontal" HorizontalAlignment="Right">
+                <Button Content="Reset" FontSize="30" Width="100" Height="100" Click="OnResetTimerClicked"/>
+                <Button Name="ToggleTimerButton" Content="Start" FontSize="30" Width="100" Height="100" Click="OnToggleTimerClicked"/>
+            </StackPanel>
         </Grid>
     </Grid>
 </Window>
